--- a/src/preface.tex
+++ b/src/preface.tex
@@ -11,7 +11,7 @@ generations of game developers in the years that followed.
 
 Since the source code of Iridis Alpha is no longer available, I have had to \href{https://github.com/mwenge/iridisalpha}{\textcolor{blue}{unpack and reinterpret}} it
 from the game binary Jeff Minter \href{https://www.llamasoftarchive.org/oldsite/llamasoft/cbm64/IridisAlpha.zip}{\textcolor{blue}{released into the public domain in 2019}}. I describe this
-reverse-engineering process in the opening chapters because I think it is an interesting exercise in and of it self to go from
+reverse-engineering process in the opening chapters because I think it is an interesting exercise in and of itself to go from
 a binary blob to a set of fully commented source code that provides insight to the inner workings of the game. 
 \hyperref[sec:archaeo]{\textcolor{blue}{A Little Archaeology}} describes how we extract the game binary from the cassette
 tape on which it was originally distributed. \hyperref[sec:disassembly]{\textcolor{blue}{Some Disassembly Required}} shows you how to go from 
@@ -25,7 +25,7 @@ Jeff Minter designed its core engine.
 
 I dedicate a full chapter \hyperref[sec:first16]{\textcolor{blue}{A Hundred Thousand Billion Theme Tunes}} to the ingenious procedural\index{procedural} programming behind Iridis Alpha's theme
 tunes and trace its inspiration back to an article 'Musical Fractals' in a 1986 issue of Byte magazine. \hyperref[sec:torusmusic]{\textcolor{blue}{Another 16\textsuperscript{4} Tunes}} looks
-at the early expermentiations with this fractal music in the demo program 'Torus' that Minter released while developing the gamed. It also delves
+at the early expermentiations with this fractal music in the demo program 'Torus' that Minter released while developing Iridis Alpha. It also delves
 into the animation\index{animation} experiment it contains, something that was used in the bonus screen\index{screen} in Iridis Alpha itself.
 
 Iridis Alpha is full of little additional extras. \hyperref[sec:bonus]{\textcolor{blue}{Congoatulations Hotshot!}} unpacks the vertical
